--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
     "useTabs": false,
-    "printWidth": 80,
+    "printWidth": 150,
     "tabWidth": 2,
-    "singleQuote": true,
+    "singleQuote": false,
     "trailingComma": "none",
     "semi": true
 }
