--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/compiler": "^9.0.0",
     "@angular/core": "^9.0.0",
     "@angular/forms": "^9.0.0",
+    "@angular/localize": "^9.0.0",
     "@angular/material": "^9.0.0",
     "@angular/platform-browser": "^9.0.0",
     "@angular/platform-browser-dynamic": "^9.0.0",
@@ -41,6 +42,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
+    "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "@ngrx/effects": "^9.0.0-beta.1",
     "@ngrx/entity": "^9.0.0-beta.1",
     "@ngrx/router-store": "^9.0.0-beta.1",
